extension_tests/invalid/syntaxErr/doWhile/doWhileKeyWordDoErr.wacc
# do typo

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begin
    int i = 0;
    doo
        print i;
        i = i + 1
    while (i < 5)
end
